# helios

./: .gitignore  CMakeLists.txt  README.md
include/: cache.hpp  client.h  client.hpp  discordApiRequest.hpp  event.hpp  events.h  heliosException.hpp  rateLimit.hpp  request.hpp  session.hpp  sharding.hpp  threadPool.hpp  token.hpp
include/discordClasses/: emoji.hpp  invite.hpp  stageInstance.hpp  team.hpp  user.hpp  voice.hpp
include/discordClasses/channel/: channel.hpp  embed.hpp  message.hpp
include/discordClasses/eventFields/: activity.hpp  presence.hpp
include/discordClasses/guild/: role.hpp
include/discordClasses/interactions/: applicationCommands.hpp  messageComponent.hpp
include/discordClassses/: application.hpp  applicationRoleConnectionMetadata.hpp  auditLog.hpp  autoModeration.hpp  discordClasses.hpp  emoji.hpp  guildScheduledEvent.hpp  guildTemplate.hpp  invite.hpp  sticker.hpp  team.hpp  user.hpp  webhook.hpp
include/discordClassses/channel/: attachment.hpp  channel.hpp  embed.hpp  message.hpp
include/discordClassses/guild/: guild.hpp  guildMember.hpp  role.hpp
include/discordClassses/interactions/: applicationCommands.hpp  interaction.hpp
include/ssl/: root_certification.hpp
src/: cache.cpp  client.cpp  discordApiRequest.cpp  event.cpp  rateLimit.cpp  request.cpp  session.cpp  sharding.cpp  threadPool.cpp
src/discordClasses/: application.cpp  applicationRoleConnectionMetadata.cpp  auditLog.cpp  autoModeration.cpp  emoji.cpp  guildScheduledEvent.cpp  guildTemplate.cpp  invite.cpp  stageInstance.cpp  sticker.cpp  team.cpp  user.cpp  voice.cpp  webhook.cpp
src/discordClasses/application/: application.cpp
src/discordClasses/applicationRoleConnectionMetadata/: applicationRoleConnectionMetadata.cpp
src/discordClasses/auditLog/: auditLog.cpp
src/discordClasses/channel/: attachment.cpp  channel.cpp  embed.cpp  message.cpp
src/discordClasses/emoji/: emoji.cpp
src/discordClasses/eventFields/: activity.cpp  presence.cpp
src/discordClasses/guild/: guild.cpp  guildMember.cpp  role.cpp
src/discordClasses/interactions/: applicationCommands.cpp  interaction.cpp  messageComponent.cpp
src/discordClasses/sticker/: sticker.cpp
src/discordClasses/user/: user.cpp
